[package]
name = "cpcalendars"
version = "0.1.0"
authors = ["Borja González Seoane <garaje@glezseoane.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
glob = "0.3.0"
fs_extra = "1.2.0"
dirs = "3.0.1"
